fixed sizing of elements to all fit on one page and not overlap

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -53,7 +53,7 @@
 }
 
 .content-center {
-	height: 65vh;
+	height: 63vh;
 }
 
 .content{
@@ -83,7 +83,7 @@
 }
 
 #cover {
-	margin-top: 1em;
+	max-height: 50vh;
 }
 
 .buttons{ 
